--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     password: ${RDS_PASSWORD}
 
     hikari:
-      connection-init-sql: SET pg_trgm.word_similarity_threshold = 0.2
+      connection-init-sql: SET pg_trgm.strict_word_similarity_threshold = 0.6;
 
     jpa:
       hibernate:
